--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    display: flex;
+    margin: 10;
+    font-family: monospace;
+    width: 500px;
+    height: 500px;
+}
+
+.text-suggestion {
+    display: flex;
+    flex-direction: row;
+}
+
+.setidea-container {
+    margin-top: 20;
+    display: flex;
+    flex-direction: row;
+}
+
+.twitt-container {
+    margin-top: 20;
+    display: flex; 
+}
